<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spotifykaraokeee.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search_song"
        android:name="com.example.spotifykaraokeee.ui.SearchSong.SearchSongFragment"
        android:label="@string/title_song_search"
        tools:layout="@layout/fragment_search_song" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.spotifykaraokeee.ui.UserProfile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>