<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryPage"
    android:background = "@color/black"
    android:id="@+id/entry_page">


    <ImageView
        android:id="@+id/ellipse_1"
        android:layout_width="251dp"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:background="@drawable/ellipse_1"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:backgroundTint="@color/logo_red"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:backgroundTint="@color/logo_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1" />

</androidx.constraintlayout.widget.ConstraintLayout>